--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-Flask==0.8
-Jinja2==2.6
-Werkzeug==0.8.3
-certifi==0.0.8
-chardet==1.0.1
-distribute==0.6.24
-gunicorn==0.14.2
-requests==0.11.1
+asgiref         3.3.1
+certifi         2020.12.5
+chardet         4.0.0
+dj-database-url 0.5.0
+Django          3.1.6
+django-heroku   0.3.1
+gunicorn        20.1.0
+idna            2.10
+instaloader     4.6.2
+pip             20.2.3
+psycopg2        2.8.6
+pytz            2021.1
+requests        2.25.1
+setuptools      49.2.1
+sqlparse        0.4.1
+urllib3         1.26.4
+whitenoise      5.2.0
